fix item overflow

--- a/src/components/Vlabs/Menu/styles.module.scss
+++ b/src/components/Vlabs/Menu/styles.module.scss
@@ -64,9 +64,9 @@ $breakpoints: (
 
 @include media('<=upper-phone') {
   .item {
-    width: 9rem;
+    width: 10.5rem;
     &:not(:last-child) {
-      margin-right: 5rem;
+      margin-right: 3rem;
     }
     &:nth-child(3n+3) {
       margin-right: 0;
